# cliz

./: .env  .gitignore  Makefile  README.md  cliq.py  cliq.yaml  cliz.py  cliz.yaml  config.json  main.py  model.py  pyproject.toml
src/cliq/: __init__.py  main.py  model.py
src/cliz/: __init__.py  main.py  model.py  shell.py
