[project]
name = "cliz"
version = "0.1.3"
description = "A useful command-line agent help you work with your favorite tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "lucario", email = "xgzlucario@foxmail.com" }]
dependencies = [
    "agno>=1.4.3",
    "html2text>=2025.4.15",
    "openai>=1.76.2",
    "sqlalchemy>=2.0.40",
]

[project.scripts]
cliz = "cliz.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cliz"]
